@@ -1,3 +1,8 @@
+2008-07-17  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
+
+	* doc/vice.texi, doc/html/plain/NEWS, doc/html/index.html,
+	doc/Win32-Cygwin-HOWTO.txt: Prepared for upcoming 2.0 release.
+
 2008-07-16  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
 
 	* Version 1.22.27
